samples/_failures_safe/1761130363_49b45a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ada063e4.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_ada063e4.c:154:9: error: expected expression at end of input
  154 |         case
      |         ^~~~
./samples/SAFE/__tmp_ada063e4.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ada063e4.c:154:9: error: expected declaration or statement at end of input
